# OBS-OpenVR-Input-Plugin

./: README.md
plugins/win-openvr/: CMakeLists.txt  win-openvr.cpp
plugins/win-openvr/data/: win-openvr-presets.ini
plugins/win-openvr/data/locale/: en-US.ini  fi-FI.ini
